# fastapi-asgi-sqlalchemy2

./: Dockerfile  README.md  docker-compose.yml  gunicorn_conf.py  pyproject.toml
alembic/: env.py
alembic/versions/: 11ddd0b957b6_add_new_user_table.py  a3496be0a1ce_first_migration.py
app/: config.py  conftest.py  const_values.py  database.py  main.py
app/api/core/: middleware.py
app/api/routers/: heartbeat.py  routes.py  sample.txt  user.py
app/models/: user.py
app/schemas/: user.py
app/services/: user.py
app/utilities/: db.py
tests/: test1.py
